@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------
 Version 3.22.2 [v3-stable] (rgerhards), 2009-07-??
 - bugfix: sending syslog messages with zip compression did not work
+- clarified use of $ActionsSendStreamDriver[AuthMode/PermittedPeers]
+  in doc set (require TLS drivers)
 ---------------------------------------------------------------------------
 Version 3.22.1 [v3-stable] (rgerhards), 2009-07-02
 - bugfix: invalid error message issued if $inlcudeConfig was on an empty
